{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 1754,
  "lineage": "258626b1-e772-2987-3aa6-6de6bd1cd3bd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "prisub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:subnet/subnet-01a9a3bf84fbde2d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 247,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9a3bf84fbde2d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522347323079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sock-shop-prisub01"
            },
            "vpc_id": "vpc-01d816c61747e1670"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "prisub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:subnet/subnet-03c53b33e63eaaeda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.0.5.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c53b33e63eaaeda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522347323079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sock-shop-prisub02"
            },
            "vpc_id": "vpc-01d816c61747e1670"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "prisub03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:subnet/subnet-01dc4016457c8d535",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.6.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc4016457c8d535",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522347323079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sock-shop-prisub03"
            },
            "vpc_id": "vpc-01d816c61747e1670"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "pubsub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:subnet/subnet-0b18ade2a8f81d3e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 244,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b18ade2a8f81d3e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522347323079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sock-shop-pubsub01"
            },
            "vpc_id": "vpc-01d816c61747e1670"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "pubsub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:subnet/subnet-004fd519b1e7cff8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 247,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004fd519b1e7cff8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522347323079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sock-shop-pubsub02"
            },
            "vpc_id": "vpc-01d816c61747e1670"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "pubsub03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:subnet/subnet-04249cd480a9666f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 247,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04249cd480a9666f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522347323079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "sock-shop-pubsub03"
            },
            "vpc_id": "vpc-01d816c61747e1670"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:vpc/vpc-01d816c61747e1670",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-098d8de988dbe3194",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0ddb31185366b8bdb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d816c61747e1670",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c70edb12189b5606",
            "owner_id": "522347323079",
            "tags": {
              "name": "sock-shop-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.Sg-keypair",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:security-group/sg-036c705d0b440819c",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036c705d0b440819c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-sg",
            "name_prefix": "",
            "owner_id": "522347323079",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d816c61747e1670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Sg-keypair",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:security-group/sg-06afa3666c8e4a973",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06afa3666c8e4a973",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "522347323079",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d816c61747e1670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Sg-keypair",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522347323079:security-group/sg-08241ae34b729e264",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08241ae34b729e264",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k8s port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-sg",
            "name_prefix": "",
            "owner_id": "522347323079",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-sg"
            },
            "tags_all": {
              "Name": "k8s-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d816c61747e1670"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-04df821a2442a6c4f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04df821a2442a6c4f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a59b62f66d082411",
            "private_dns": "ip-10-0-4-29.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.29",
            "public_ip": "34.243.3.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05916216ee43ee3ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a9a3bf84fbde2d3",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036c705d0b440819c"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.ansible-sg",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.haproxy.aws_instance.haproxy1",
            "module.haproxy.aws_instance.haproxy2",
            "module.masternode.aws_instance.masternode",
            "module.workernode.aws_instance.workernode"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-0eacbf8b5ac968ad9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eacbf8b5ac968ad9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006b321674735d14a",
            "private_dns": "ip-10-0-1-37.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.37",
            "public_ip": "54.216.100.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026b38ea30fb6be0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b18ade2a8f81d3e3",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06afa3666c8e4a973"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.bastion-sg",
            "module.Sg-keypair.tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/prod-lb-sock/2ebf65ad28d51157",
            "arn_suffix": "app/prod-lb-sock/2ebf65ad28d51157",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-lb-sock-1046371395.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/prod-lb-sock/2ebf65ad28d51157",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-lb-sock",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08241ae34b729e264"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004fd519b1e7cff8c"
              },
              {
                "subnet_id": "subnet-04249cd480a9666f0"
              },
              {
                "subnet_id": "subnet-0b18ade2a8f81d3e3"
              }
            ],
            "subnets": [
              "subnet-004fd519b1e7cff8c",
              "subnet-04249cd480a9666f0",
              "subnet-0b18ade2a8f81d3e3"
            ],
            "tags": {
              "Name": "prod-lb-sock"
            },
            "tags_all": {
              "Name": "prod-lb-sock"
            },
            "vpc_id": "vpc-01d816c61747e1670",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "stage-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/stage-lb-sock/8cfd84e3e9e4e81c",
            "arn_suffix": "app/stage-lb-sock/8cfd84e3e9e4e81c",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "stage-lb-sock-439410262.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/stage-lb-sock/8cfd84e3e9e4e81c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stage-lb-sock",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08241ae34b729e264"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004fd519b1e7cff8c"
              },
              {
                "subnet_id": "subnet-04249cd480a9666f0"
              },
              {
                "subnet_id": "subnet-0b18ade2a8f81d3e3"
              }
            ],
            "subnets": [
              "subnet-004fd519b1e7cff8c",
              "subnet-04249cd480a9666f0",
              "subnet-0b18ade2a8f81d3e3"
            ],
            "tags": {
              "Name": "stage-lb-sock"
            },
            "tags_all": {
              "Name": "stage-lb-sock"
            },
            "vpc_id": "vpc-01d816c61747e1670",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/prod-lb-sock/2ebf65ad28d51157/e422a007565b0759",
            "certificate_arn": "arn:aws:acm:eu-west-1:522347323079:certificate/ca2a2d5e-f6f3-4d0a-b4fc-4c4ac579ab26",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/prod-lb-sock/2ebf65ad28d51157/e422a007565b0759",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/prod-lb-sock/2ebf65ad28d51157",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.env-lb.aws_lb.prod-lb",
            "module.env-lb.aws_lb_target_group.prod-tg",
            "module.route53.aws_acm_certificate.cert-ssl"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "stage-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/stage-lb-sock/8cfd84e3e9e4e81c/28cf4ff41f6a47c4",
            "certificate_arn": "arn:aws:acm:eu-west-1:522347323079:certificate/ca2a2d5e-f6f3-4d0a-b4fc-4c4ac579ab26",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/stage-lb-sock/8cfd84e3e9e4e81c/28cf4ff41f6a47c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/stage-lb-sock/8cfd84e3e9e4e81c",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.env-lb.aws_lb.stage-lb",
            "module.env-lb.aws_lb_target_group.stage-tg",
            "module.route53.aws_acm_certificate.cert-ssl"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d",
            "arn_suffix": "targetgroup/prod-lb-sock-tg/d9a3f4913d88508d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-lb-sock-tg",
            "port": 30002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d816c61747e1670"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stage-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4",
            "arn_suffix": "targetgroup/stage-lb-sock-tg/31b1750f552462e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "stage-lb-sock-tg",
            "port": 30001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d816c61747e1670"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "prod-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d-20240101153209661100000010",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d",
            "target_id": "i-00a31c8f3842c685d"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.env-lb.aws_lb_target_group.prod-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d-20240101153209798600000011",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d",
            "target_id": "i-0d4ff12d4001fc8e2"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.env-lb.aws_lb_target_group.prod-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d-2024010115320950730000000e",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prod-lb-sock-tg/d9a3f4913d88508d",
            "target_id": "i-0a692e4ffc31413a3"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.env-lb.aws_lb_target_group.prod-tg",
            "module.workernode.aws_instance.workernode"
          ]
        }
      ]
    },
    {
      "module": "module.env-lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "stage-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4-20240101153209839200000012",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4",
            "target_id": "i-00a31c8f3842c685d"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.env-lb.aws_lb_target_group.stage-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4-20240101153209960400000013",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4",
            "target_id": "i-0d4ff12d4001fc8e2"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.env-lb.aws_lb_target_group.stage-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4-20240101153210079600000014",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/stage-lb-sock-tg/31b1750f552462e4",
            "target_id": "i-0a692e4ffc31413a3"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.env-lb.aws_lb_target_group.stage-tg",
            "module.workernode.aws_instance.workernode"
          ]
        }
      ]
    },
    {
      "module": "module.haproxy",
      "mode": "managed",
      "type": "aws_instance",
      "name": "haproxy1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-0ac5ea1a1d8b3e75a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac5ea1a1d8b3e75a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0064796f53a21de63",
            "private_dns": "ip-10-0-4-150.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.150",
            "public_ip": "34.254.100.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0932ab79b635b42ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a9a3bf84fbde2d3",
            "tags": {
              "Name": "haproxy1"
            },
            "tags_all": {
              "Name": "haproxy1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.masternode.aws_instance.masternode"
          ]
        }
      ]
    },
    {
      "module": "module.haproxy",
      "mode": "managed",
      "type": "aws_instance",
      "name": "haproxy2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-0b56bbbe6eb30bf93",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b56bbbe6eb30bf93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099340f639a1c6fcd",
            "private_dns": "ip-10-0-5-221.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.221",
            "public_ip": "52.18.164.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-066a84da39ef0a76d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c53b33e63eaaeda",
            "tags": {
              "Name": "haproxy2"
            },
            "tags_all": {
              "Name": "haproxy2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.masternode.aws_instance.masternode"
          ]
        }
      ]
    },
    {
      "module": "module.masternode",
      "mode": "managed",
      "type": "aws_instance",
      "name": "masternode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-0c8539ac61d5c23c1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8539ac61d5c23c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c913269a6cfca1f9",
            "private_dns": "ip-10-0-4-89.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.89",
            "public_ip": "52.213.109.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094695d6040cd437e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a9a3bf84fbde2d3",
            "tags": {
              "Name": "masternode"
            },
            "tags_all": {
              "Name": "masternode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-04665b0a56894fdfe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04665b0a56894fdfe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a681a1f7e453027",
            "private_dns": "ip-10-0-5-27.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.27",
            "public_ip": "54.229.241.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06637e68ee084b783",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c53b33e63eaaeda",
            "tags": {
              "Name": "masternode"
            },
            "tags_all": {
              "Name": "masternode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-02c509c377c70d27a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c509c377c70d27a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0729c62bdef3194c6",
            "private_dns": "ip-10-0-6-143.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.143",
            "public_ip": "34.244.76.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cf9f6c90ac643e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01dc4016457c8d535",
            "tags": {
              "Name": "masternode"
            },
            "tags_all": {
              "Name": "masternode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "graf-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/graf-lb-sock/ec65b471f2bfee28",
            "arn_suffix": "app/graf-lb-sock/ec65b471f2bfee28",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "graf-lb-sock-487734300.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/graf-lb-sock/ec65b471f2bfee28",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "graf-lb-sock",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08241ae34b729e264"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004fd519b1e7cff8c"
              },
              {
                "subnet_id": "subnet-04249cd480a9666f0"
              },
              {
                "subnet_id": "subnet-0b18ade2a8f81d3e3"
              }
            ],
            "subnets": [
              "subnet-004fd519b1e7cff8c",
              "subnet-04249cd480a9666f0",
              "subnet-0b18ade2a8f81d3e3"
            ],
            "tags": {
              "Name": "prod-lb-sock"
            },
            "tags_all": {
              "Name": "prod-lb-sock"
            },
            "vpc_id": "vpc-01d816c61747e1670",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "prom-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/prom-lb-sock/ff489674a0f82b5b",
            "arn_suffix": "app/prom-lb-sock/ff489674a0f82b5b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prom-lb-sock-196119701.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/prom-lb-sock/ff489674a0f82b5b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prom-lb-sock",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08241ae34b729e264"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004fd519b1e7cff8c"
              },
              {
                "subnet_id": "subnet-04249cd480a9666f0"
              },
              {
                "subnet_id": "subnet-0b18ade2a8f81d3e3"
              }
            ],
            "subnets": [
              "subnet-004fd519b1e7cff8c",
              "subnet-04249cd480a9666f0",
              "subnet-0b18ade2a8f81d3e3"
            ],
            "tags": {
              "Name": "stage-lb-sock"
            },
            "tags_all": {
              "Name": "stage-lb-sock"
            },
            "vpc_id": "vpc-01d816c61747e1670",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/graf-lb-sock/ec65b471f2bfee28/5c2a62fc9ce333e4",
            "certificate_arn": "arn:aws:acm:eu-west-1:522347323079:certificate/ca2a2d5e-f6f3-4d0a-b4fc-4c4ac579ab26",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/graf-lb-sock/ec65b471f2bfee28/5c2a62fc9ce333e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/graf-lb-sock/ec65b471f2bfee28",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.monitoring-lb.aws_lb.graf-lb",
            "module.monitoring-lb.aws_lb_target_group.graf-tg",
            "module.route53.aws_acm_certificate.cert-ssl"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prom-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/prom-lb-sock/ff489674a0f82b5b/7faea9d8bb95c6a1",
            "certificate_arn": "arn:aws:acm:eu-west-1:522347323079:certificate/ca2a2d5e-f6f3-4d0a-b4fc-4c4ac579ab26",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:listener/app/prom-lb-sock/ff489674a0f82b5b/7faea9d8bb95c6a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:loadbalancer/app/prom-lb-sock/ff489674a0f82b5b",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.pubsub01",
            "data.aws_subnet.pubsub02",
            "data.aws_subnet.pubsub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.monitoring-lb.aws_lb.prom-lb",
            "module.monitoring-lb.aws_lb_target_group.prom-tg",
            "module.route53.aws_acm_certificate.cert-ssl"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "graf-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a",
            "arn_suffix": "targetgroup/graf-lb-sock-tg/444dca0299e38e0a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "graf-lb-sock-tg",
            "port": 31300,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d816c61747e1670"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prom-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203",
            "arn_suffix": "targetgroup/prom-lb-sock-tg/c54b0690cdfb0203",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prom-lb-sock-tg",
            "port": 31090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d816c61747e1670"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "graf-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a-2024010115320907180000000a",
            "port": 31300,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a",
            "target_id": "i-00a31c8f3842c685d"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.monitoring-lb.aws_lb_target_group.graf-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a-2024010115320919850000000b",
            "port": 31300,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a",
            "target_id": "i-0d4ff12d4001fc8e2"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.monitoring-lb.aws_lb_target_group.graf-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a-20240101153208900700000009",
            "port": 31300,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/graf-lb-sock-tg/444dca0299e38e0a",
            "target_id": "i-0a692e4ffc31413a3"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.monitoring-lb.aws_lb_target_group.graf-tg",
            "module.workernode.aws_instance.workernode"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring-lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "prom-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203-2024010115320935980000000d",
            "port": 31090,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203",
            "target_id": "i-00a31c8f3842c685d"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.monitoring-lb.aws_lb_target_group.prom-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203-2024010115320922760000000c",
            "port": 31090,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203",
            "target_id": "i-0d4ff12d4001fc8e2"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.monitoring-lb.aws_lb_target_group.prom-tg",
            "module.workernode.aws_instance.workernode"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203-2024010115320950860000000f",
            "port": 31090,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:522347323079:targetgroup/prom-lb-sock-tg/c54b0690cdfb0203",
            "target_id": "i-0a692e4ffc31413a3"
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key",
            "module.monitoring-lb.aws_lb_target_group.prom-tg",
            "module.workernode.aws_instance.workernode"
          ]
        }
      ]
    },
    {
      "module": "module.workernode",
      "mode": "managed",
      "type": "aws_instance",
      "name": "workernode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-00a31c8f3842c685d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a31c8f3842c685d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05dbd4fec8d587bb1",
            "private_dns": "ip-10-0-4-50.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.50",
            "public_ip": "52.209.189.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b44bc7667b42b56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a9a3bf84fbde2d3",
            "tags": {
              "Name": "workernode"
            },
            "tags_all": {
              "Name": "workernode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-0d4ff12d4001fc8e2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4ff12d4001fc8e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8d2ac5356ee0ee7",
            "private_dns": "ip-10-0-5-180.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.180",
            "public_ip": "3.249.130.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fc57956e52ec7932",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c53b33e63eaaeda",
            "tags": {
              "Name": "workernode"
            },
            "tags_all": {
              "Name": "workernode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:522347323079:instance/i-0a692e4ffc31413a3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a692e4ffc31413a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ea2a02a8a1cba76",
            "private_dns": "ip-10-0-6-232.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.232",
            "public_ip": "34.241.27.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9b5f3212a1ea81f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01dc4016457c8d535",
            "tags": {
              "Name": "workernode"
            },
            "tags_all": {
              "Name": "workernode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08241ae34b729e264"
            ]
          },
          "dependencies": [
            "data.aws_subnet.prisub01",
            "data.aws_subnet.prisub02",
            "data.aws_subnet.prisub03",
            "data.aws_vpc.vpc",
            "module.Sg-keypair.aws_key_pair.key",
            "module.Sg-keypair.aws_security_group.k8s-sg",
            "module.Sg-keypair.tls_private_key.key"
          ]
        }
      ]
    }
  ]
}